--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,7 @@
 
   --color-myBlack: #353333;
   --color-myWhite: #e5dcd8;
+  --color-myWhiteLight: #e5dcd84a;
   --color-myOrange: #f35c4e;
   
   --font-primary: "Lilita One", "sans-serif";
